Data: Add missing 7 Tier 1 shops and prioritize in admin panel

--- a/admin_pov.html
+++ b/admin_pov.html
@@ -292,7 +292,7 @@
             }
 
             const mapObj = {};
-            const HOT_TARGETS = ['로또마트', '농협중앙회 앞 가판', '이름미상(화명동)', '농협 앞 가판점', '청화빌딩', '로또 명당 가판점', '153로또판매점', '119복권방'];
+            const HOT_TARGETS = ['동행복권(dhlottery.co.kr)', '명당골복권방', '행복충전소', '버스표가판점', '미나식품', '현대장미슈퍼', '로또복권두정점', '로또마트', '농협중앙회 앞 가판', '이름미상(화명동)', '농협 앞 가판점', '청화빌딩', '로또 명당 가판점', '153로또판매점', '119복권방'];
 
             lottoData.forEach(item => {
                 if (!item.n) return;
@@ -315,7 +315,7 @@
                 if (item.pov && (item.pov.id || item.pov.panoid)) mapObj[key].pov = item.pov;
             });
 
-            const NEW_LEGENDS = ["부일카서비스", "스파", "로또명당인주점", "뉴빅마트", "일등복권편의점", "로또휴게실", "세진전자통신", "잠실매점", "목화휴게소", "오천억복권방", "복권나라", "오케이상사", "제이복권방", "알리바이", "다니엘사", "돈벼락맞는곳", "영화유통(1등복권방)", "복권백화점", "버스판매소", "천하명당복권방", "알리바이(나주점)", "행운복권방", "썬마트", "대박천하마트", "천하명당복권", "묵동식품", "행운복권방 보생당건강원", "북마산복권전문점", "노다지복권방", "행복한사람들 (흥부네)", "대박마트복권방", "복권명당(서부점)", "버스표판매소", "올인복권방", "한꿈복권방", "종합복권슈퍼", "라이프마트", "또또복권방", "종합가판점", "복권방", "갈렙분식한식", "NG24"];
+            const NEW_LEGENDS = ["동행복권(dhlottery.co.kr)", "명당골복권방", "행복충전소", "버스표가판점", "미나식품", "현대장미슈퍼", "로또복권두정점", "부일카서비스", "스파", "로또명당인주점", "뉴빅마트", "일등복권편의점", "로또휴게실", "세진전자통신", "잠실매점", "목화휴게소", "오천억복권방", "복권나라", "오케이상사", "제이복권방", "알리바이", "다니엘사", "돈벼락맞는곳", "영화유통(1등복권방)", "복권백화점", "버스판매소", "천하명당복권방", "알리바이(나주점)", "행운복권방", "썬마트", "대박천하마트", "천하명당복권", "묵동식품", "행운복권방 보생당건강원", "북마산복권전문점", "노다지복권방", "행복한사람들 (흥부네)", "대박마트복권방", "복권명당(서부점)", "버스표판매소", "올인복권방", "한꿈복권방", "종합복권슈퍼", "라이프마트", "또또복권방", "종합가판점", "복권방", "갈렙분식한식", "NG24"];
 
             const list = Object.values(mapObj)
                 .filter(s => {
