--- a/index.html
+++ b/index.html
@@ -3909,28 +3909,42 @@
                     uniqueShops[key].rounds.push({ r: d.r, m: d.m });
                 });
 
-                Object.values(uniqueShops).forEach(shop => {
+                // Sort data by Tier to ensure Tier 1 is processed/rendered with priority if needed,
+                // but for Kakao Maps multiple markers, sorting helps control draw order (last drawn is on top).
+                // Let's sort so that Tier 1 is drawn LAST (highest priority).
+                const tierRank = (shop) => {
+                    if (shop.closed) return 0;
+                    if (shop.totalWins >= 10) return 4;
+                    if (shop.totalWins >= 5) return 3;
+                    if (shop.totalWins >= 3) return 2;
+                    return 1;
+                };
+
+                const sortedShops = Object.values(uniqueShops).sort((a, b) => tierRank(a) - tierRank(b));
+
+                sortedShops.forEach(shop => {
                     let markerImg = null;
-                    // Tiered Styles
-                    // Tiered Styles (SVG-based for reliability)
-                    const SVG_DIAMOND = 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="%2303a9f4" d="M12.1 3L5.89 9.1l6.21 11.9 6.21-11.9zM11 5.3L7.7 8.5h3.3zm2 0v3.2h3.3zM8.5 10l3.5 6.6 3.5-6.6z"/></svg>';
-                    const SVG_CROWN = 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="%23fbc02d" d="M5 16h14a2 2 0 0 1 2 2v2H3v-2a2 2 0 0 1 2-2zm7-14l3 5 5-2-3 7H5l-3-7 5 2 3-5z"/></svg>';
-                    const SVG_ORANGE = 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10" fill="%23ff9800" stroke="white" stroke-width="2"/></svg>';
-                    const SVG_GLOBE = 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10" fill="%232196f3" stroke="white" stroke-width="2"/><path fill="%234caf50" d="M12 2a10 10 0 0 0-8 4c2 1 4 0 4 0s2 3 5 3 4-2 4-2 1 4 4 4a10 10 0 0 0-9-9z"/></svg>';
-                    const SVG_CLOSED = 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10" fill="%239e9e9e"/><path fill="white" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg>';
+                    const ICON_SIZE = 32;
+
+                    // New Custom Tier Icons
+                    const ICON_TIER1 = 'assets/markers/tier1.png';
+                    const ICON_TIER2 = 'assets/markers/tier2.png';
+                    const ICON_TIER3 = 'assets/markers/tier3.png';
+                    const ICON_TIER4 = 'assets/markers/tier4.png';
+                    const ICON_CLOSED = 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10" fill="%239e9e9e"/><path fill="white" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg>';
 
                     if (shop.totalWins >= 10) {
-                        markerImg = new kakao.maps.MarkerImage(SVG_DIAMOND, new kakao.maps.Size(32, 32));
+                        markerImg = new kakao.maps.MarkerImage(ICON_TIER1, new kakao.maps.Size(40, 40));
                     } else if (shop.totalWins >= 5) {
-                        markerImg = new kakao.maps.MarkerImage(SVG_CROWN, new kakao.maps.Size(32, 28));
+                        markerImg = new kakao.maps.MarkerImage(ICON_TIER2, new kakao.maps.Size(32, 40));
                     } else if (shop.totalWins >= 3) {
-                        markerImg = new kakao.maps.MarkerImage(SVG_ORANGE, new kakao.maps.Size(20, 20));
+                        markerImg = new kakao.maps.MarkerImage(ICON_TIER3, new kakao.maps.Size(32, 32));
                     } else {
-                        markerImg = new kakao.maps.MarkerImage(SVG_GLOBE, new kakao.maps.Size(20, 20));
+                        markerImg = new kakao.maps.MarkerImage(ICON_TIER4, new kakao.maps.Size(32, 32));
                     }
 
                     if (shop.closed) {
-                        markerImg = new kakao.maps.MarkerImage(SVG_CLOSED, new kakao.maps.Size(24, 24));
+                        markerImg = new kakao.maps.MarkerImage(ICON_CLOSED, new kakao.maps.Size(24, 24));
                     }
 
                     const marker = new kakao.maps.Marker({
