--- a/index.html
+++ b/index.html
@@ -304,10 +304,11 @@
         }
 
         .legend-icon {
-            width: 18px;
-            height: 18px;
+            width: 32px;
+            height: 32px;
             vertical-align: middle;
             object-fit: contain;
+            margin-right: 5px;
         }
 
         .iw-addr-box {
@@ -3963,13 +3964,25 @@
                     const ICON_CLOSED = 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10" fill="%239e9e9e"/><path fill="white" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg>';
 
                     if (shop.totalWins >= 10) {
-                        markerImg = new kakao.maps.MarkerImage(ICON_TIER1, new kakao.maps.Size(40, 40));
+                        // Tier 1: Red Gem (Ratio ~0.88, Original 244x275)
+                        markerImg = new kakao.maps.MarkerImage(ICON_TIER1, new kakao.maps.Size(56, 64), {
+                            offset: new kakao.maps.Point(28, 64) // Tip of the red pillar
+                        });
                     } else if (shop.totalWins >= 5) {
-                        markerImg = new kakao.maps.MarkerImage(ICON_TIER2, new kakao.maps.Size(32, 40));
+                        // Tier 2: Gold Shield (Ratio ~0.9, Original 245x272)
+                        markerImg = new kakao.maps.MarkerImage(ICON_TIER2, new kakao.maps.Size(50, 56), {
+                            offset: new kakao.maps.Point(25, 56) // Tip of the base
+                        });
                     } else if (shop.totalWins >= 3) {
-                        markerImg = new kakao.maps.MarkerImage(ICON_TIER3, new kakao.maps.Size(32, 32));
+                        // Tier 3: Blue Gem (Ratio ~0.47, Original 244x510)
+                        markerImg = new kakao.maps.MarkerImage(ICON_TIER3, new kakao.maps.Size(30, 62), {
+                            offset: new kakao.maps.Point(15, 62) // Exact tip of the long pin
+                        });
                     } else {
-                        markerImg = new kakao.maps.MarkerImage(ICON_TIER4, new kakao.maps.Size(32, 32));
+                        // Tier 4: Silver Pin (Ratio ~0.47, Original 245x511)
+                        markerImg = new kakao.maps.MarkerImage(ICON_TIER4, new kakao.maps.Size(30, 62), {
+                            offset: new kakao.maps.Point(15, 62) // Exact tip of the long pin
+                        });
                     }
 
                     if (shop.closed) {
