Refactor: extreme minimalist legend icons (heads only) and adjusted sidebar spacing

--- a/index.html
+++ b/index.html
@@ -304,11 +304,14 @@
         }
 
         .legend-icon {
-            width: 32px;
-            height: 32px;
+            width: 30px;
+            height: 30px;
             vertical-align: middle;
             object-fit: contain;
-            margin-right: -2px;
+            margin-right: -4px;
+            /* Pull text closer */
+            margin-left: -2px;
+            /* Pull away from checkbox slightly */
             position: relative;
             top: -1px;
         }
