UI: 12간지 띠 버튼 레이아웃 3x4 및 중앙 정렬 수정

--- a/index.html
+++ b/index.html
@@ -571,9 +571,12 @@
         /* Zodiac Grid Styles */
         .zodiac-grid {
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
+            grid-template-columns: repeat(3, 1fr);
             gap: 12px;
             padding: 10px;
+            width: 100%;
+            max-width: 320px;
+            margin: 0 auto;
         }
 
         .zodiac-item {
@@ -2055,7 +2058,7 @@
         /* Zodiac Mode Styles */
         .zodiac-grid {
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
+            grid-template-columns: repeat(3, 1fr);
             gap: 10px;
             width: 100%;
             max-width: 320px;
